Mon Aug 31 16:41:00 UTC 2009  Chad Elliott  <elliott_c@ociweb.com>

        * PROBLEM-REPORT-FORM:

          Updated URLs.

        * modules/BCB2007ProjectCreator.pm:
        * modules/BCB2007WorkspaceCreator.pm:
        * modules/ConfigParser.pm:

          Corrected comments.

        * modules/ProjectCreator.pm:

          Alphabetized the keywords (which makes it easier when updating
          documentation).  Updated comments and added a minor performance
          enhancment.

        * modules/TemplateParser.pm:

          Fixed a bug where 'features' used in a template would get confused
          with template scopes.

        * modules/WB26ProjectCreator.pm:

          If the user overrides the template, still provide a valid project
          file name in the project_file_name() method.

        * modules/WorkspaceCreator.pm:

          Fixed a bug where duplicate mpc files added by aggregated
          workspaces would not be correctly ignored.

Tue Aug 25 12:22:59 UTC 2009  Chad Elliott  <elliott_c@ociweb.com>

        * config/qt4_core.mpb:
        * config/qt4_designer.mpb:
        * config/qt4_designercomponents.mpb:
        * config/qt4_gui.mpb:
        * config/qt4_network.mpb:
        * config/qt4_opengl.mpb:
        * config/qt4_qt3support.mpb:
        * config/qt4_sql.mpb:
        * config/qt4_svg.mpb:
        * config/qt4_test.mpb:
        * config/qt4_xml.mpb:

          Committing changes from Ciju John.  Removed the hard-coded 4 in
          the library names and switch from using $(QTDEBUG) to $(QT_CFG).

Mon Aug 24 13:10:16 UTC 2009  Chad Elliott  <elliott_c@ociweb.com>

        * docs/USAGE:
        * modules/Options.pm:

          Changed VAR to VAL.

        * docs/html/MakeProjectCreator.html:

          Added missing <a name>'s.

        * modules/AutomakeWorkspaceCreator.pm:

          Added associated names to the list of AM_CONDITIONAL.

        * modules/Creator.pm:
